# voxviz

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  voxviz_test.runsettings
cmake/: FindOpenVR.cmake
experiments/: 1d-volume-cascade-traversal.js  2d-pbd.js  2d-physics-grid.js  2d-physics.js  2d-ray-dda.js  2d-volume-cascade-trace.js  2d-volume-cascade.js  2d-volume-ops.js  mipmaps.js  package-lock.json  package.json
experiments/grid-physics/: body.js  demo.js  grid.js  isect.js  sim.js  test-body.js  test-grid.js  test-isect.js  test-sim.js  test-tickbuffer.js  tickbuffer.js
experiments/lib/: brick.js  hsl.js  keyboard.js  lookat.js  square.js  tx.js  txo.js  volume.js  voxel-cascade.js
experiments/lib/collision/: aabb-obb.js  obb-obb.js
experiments/lib/render/: camera-rays.js  camera.js  obb.js
img/models/: 1x1x1.vox  8x16x32-cube.vox  Sopwoothfull.vox  backhoe.vox  car.vox  car2.vox  cube.vox  cyl.vox  first.vox  flower-bush.vox  hollow-cube.vox  monu10.vox  plane32cubed.vox  rh2house.vox  track-questionmark.vox  truck.vox
img/models/debug/: 1x1x1-cube.vox  40x40x40-cube.vox  64x64-plane-pyr.vox  64x64-plane.vox
img/models/track/: straight-horizontal.vox  straight-vertical.vox  street-light.vox
include/: a-buffer.h  aabb.h  blue-noise.h  brick.h  camera-free.h  camera-orbit.h  clu.h  compute.h  core.h  fullscreen-surface.h  gl-wrap.h  greedy-mesher.h  mesher.h  model.h  obb.h  orbit-camera.h  raytrace.h  renderpipe.h  scene.h  shadowmap.h  splats.h  uniform-grid.h  vec.h  volume-manager.h  volume.h  voxel-cascade.h  voxel.h
include/cl/: clu.h
include/collision/: aabb-obb.h
include/glad/: glad.h
include/parser/magicavoxel/: vox.h
include/parser/raw/: raw.h
include/parser/vzd/: .gitignore  out.vzd  vzd.h  vzd.js
include/voxviz/: aabb.h  physics.h
include/voxviz/physics/: broadphase-grid.h
lib/: renderpipe_generated.h  renderpipe_generated.js
lib/Debug/: qu3e.lib
pipelines/: go.js
proto/: renderpipe.fbs  renderpipe_generated.h  renderpipe_generated.js
scenes/: go.js  triangle.js
shaders/: CMakeLists.txt  a-buffer-clear.comp  a-buffer-clear.frag  a-buffer-debug.frag  a-buffer-rasterize.frag  a-buffer-rasterize.vert  a-buffer-sort.comp  a-buffer.frag  a-buffer.vert  basic.vert  brick-add.comp  brick-cut.comp  cdir.glsl  color.frag  composite.frag  convert.js  cosine-direction.glsl  dda-cursor.glsl  debug-bindless.frag  depth-to-grey.frag  fbm.glsl  fill-all.comp  fill-sphere.comp  hsl.glsl  hsl2rgb.glsl  kernel.cl  light-buffer-fill.comp  light-space-blur-down.comp  light-space-blur-up.comp  light-space-clear.comp  light-space-conetrace.comp  light-space-fill.comp  light-space-mipmap.comp  light-space-mips.glsl  mesh.frag  mesh.vert  mips.glsl  morton.glsl  palette.glsl  points-collect.comp  (+34 more)
shaders/shadowmap/: shadowmap.vert
shaders/shared/: quadric-proj.glsl
shaders/splats/: extract-seed.comp  extract-work.comp  output.frag  output.vert  raster.comp  raster.frag  raster.vert  util.glsl
shaders/voxel-space/: binpack.glsl  build.comp  debug.frag  lights.comp  lights.frag  lights.vert  mipmap.comp  trace.glsl
src/: aabb.cpp  brick.cpp  clu.cpp  compute.cpp  fullscreen-surface.cpp  gl-wrap.cpp  glad.c  main.c  main.cpp  mesher.cpp  raytrace.h  volume.cpp  volume.h
test/: CMakeLists.txt  main.cpp  obb-test.h  volume_cut_test.h
test/include/: obb-test.h
